objects/bDeal__c.object
<CustomObject>
    <fields>
        <fullName>If_No_Select_Why_Deal_Isn_t_Eligible__c</fullName>
        <label>If No, Select Why Deal Isn&apos;t Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Support exceeds Fast Track Threshold</fullName>
                </value>
                <value>
                    <fullName>Deal type not allowed for Fast Track</fullName>
                </value>
                <value>
                    <fullName>Issuer Payout Ratio (IIR) exceeds benchmark </fullName>
                </value>
                <value>
                    <fullName>Deal term exceeds standard period</fullName>
                </value>
                <value>
                    <fullName>Others not compliant with Fast Track guidelines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_no_please_explain_clawback__c</fullName>
        <inlineHelpText>Reason why a clawback provision is not included for the deal.</inlineHelpText>
        <label>If No, Explain (Clawback)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>If_yes_describe_calculation_for_clawbac__c</fullName>
        <inlineHelpText>Clawbacks for underperformance should be clearly defined and state exactly how they will be calculated and executed.</inlineHelpText>
        <label>If Yes, Describe Clawback Calculation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Auto_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox value check whether current deal is expired by automatic batch process or not</description>
        <inlineHelpText>Is this deal expired by automatic batch process?</inlineHelpText>
        <label>Is Auto Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_New_Financial_Model__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is New Financial Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Visa_Flip__c</fullName>
        <description>This field is no longer needed (replaced by additional portfolio information)  ==&gt; to delete</description>
        <inlineHelpText>Identifies whether this deal has a Visa Flip components</inlineHelpText>
        <label>TBDEL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_early_renewal__c</fullName>
        <inlineHelpText>Indicates whether this deal is an early renewal of an existing deal with the customer.</inlineHelpText>
        <label>Is This Early Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issuer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issuer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Deals_bSmart</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Submitted_By__c</fullName>
        <formula>Approval_Submitter__r.FirstName &amp; &quot; &quot; &amp;  Approval_Submitter__r.LastName &amp; &quot;, &quot; &amp;  TEXT(DATETIMEVALUE(Date_of_submission__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Submitted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update_Date_Non_Admin__c</fullName>
        <description>Identifies the date the record was last modifed by a non-Admin. Updated via workflow.</description>
        <label>Last Update Date (Non-Admin)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By_Non_Admin__c</fullName>
        <description>Identifies the last non-Admin user to modify the record. (updated via workflow).</description>
        <label>Last Updated By (Non-Admin)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_BSmart_Id__c</fullName>
        <inlineHelpText>Unique identifier populated by b-SMART for any deal that existed in old b-SMART.</inlineHelpText>
        <label>Legacy b-SMART ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>The team agreed to add a new field on the Issuing and Acquiring deal types only.  This is to facilitate the US need to track whether a deal is for a Principal or an Affiliate.  The US region uses the Segment and Alliance deal types to capture affiliate agreements.   With the collapse of these deal types into one this new field will allow for reporting on these license types.</description>
        <inlineHelpText>Is this deal for a Principal or Affiliate License?</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Principal</fullName>
                    <default>true</default>
                    <label>Principal</label>
                </value>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoB_Commercial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Line of Business Commercial</description>
        <inlineHelpText>Line of Business Commercial</inlineHelpText>
        <label>LoB Commercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoB_Consumer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Line of Business Consumer</description>
        <inlineHelpText>Line of Business Consumer</inlineHelpText>
        <label>LoB Consumer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoB_Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Line of Business Debit</description>
        <inlineHelpText>Line of Business Debit</inlineHelpText>
        <label>LoB Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_VAT_GDT_Business_Tax_Applicability__c</fullName>
        <inlineHelpText>MasterCard liability for any local VAT/ GDT or business tax if applicable.</inlineHelpText>
        <label>Local VAT/GDT/Business Tax Applicability</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MC_Discounted_Issuer_Payout_Base_Inc__c</fullName>
        <formula>If( (BLANKVALUE( Disc_Gross_Customer_Revenue_Base_Inc__c ,0) + BLANKVALUE( Discounted_Other_Costs_Base_Inc__c ,0) + BLANKVALUE(  Discounted_Other_Revenue_Base_Inc__c  ,0))=0,0,

If(( -T2_Discounted_Incentive__c  - T2_Discounted_VAS_Margin__c )/( Disc_Gross_Customer_Revenue_Base_Inc__c + Discounted_Other_Costs_Base_Inc__c + Discounted_Other_Revenue_Base_Inc__c)&gt;0,
( -T2_Discounted_Incentive__c - T2_Discounted_VAS_Margin__c )/( Disc_Gross_Customer_Revenue_Base_Inc__c + Discounted_Other_Costs_Base_Inc__c + Discounted_Other_Revenue_Base_Inc__c),
( -T2_Discounted_Incentive__c- T2_Discounted_VAS_Margin__c )/( Disc_Gross_Customer_Revenue_Base_Inc__c + Discounted_Other_Costs_Base_Inc__c + Discounted_Other_Revenue_Base_Inc__c)*-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disc. Issuer Payout % incl Margin(B + I)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MC_Discounted_Issuer_Payout_Inc__c</fullName>
        <formula>If( (BLANKVALUE(Discounted_Gross_Customer_Revenue_Inc__c,0) + BLANKVALUE(Discounted_Other_Costs_Inc__c,0) + BLANKVALUE(  Discounted_Other_Revenue_Inc__c ,0))=0,0,

If(( -T1_Discounted_Incentive_USD__c - T1_Discounted_VAS_Margin__c )/( Discounted_Gross_Customer_Revenue_Inc__c + Discounted_Other_Costs_Inc__c + Discounted_Other_Revenue_Inc__c)&gt;0,
( -T1_Discounted_Incentive_USD__c - T1_Discounted_VAS_Margin__c )/( Discounted_Gross_Customer_Revenue_Inc__c + Discounted_Other_Costs_Inc__c + Discounted_Other_Revenue_Inc__c),
( -T1_Discounted_Incentive_USD__c - T1_Discounted_VAS_Margin__c )/( Discounted_Gross_Customer_Revenue_Inc__c + Discounted_Other_Costs_Inc__c + Discounted_Other_Revenue_Inc__c)*-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disc. Issuer Payout % incl. Margin(Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MC_Discounted_Payout_Base_Inc__c</fullName>
        <formula>If( (BLANKVALUE(  Discounted_Gross_Total_Revenue_B_I__c  ,0) + BLANKVALUE( Discounted_Other_Costs_Base_Inc__c ,0))=0,0,

If((  -T2_Discounted_Incentive__c - T2_Discounted_VAS_Margin__c )/( Discounted_Gross_Total_Revenue_B_I__c + Discounted_Other_Costs_Base_Inc__c )&gt;0,
(  -T2_Discounted_Incentive__c - T2_Discounted_VAS_Margin__c )/( Discounted_Gross_Total_Revenue_B_I__c + Discounted_Other_Costs_Base_Inc__c ),
(  -T2_Discounted_Incentive__c - T2_Discounted_VAS_Margin__c )/( Discounted_Gross_Total_Revenue_B_I__c + Discounted_Other_Costs_Base_Inc__c )*-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disc.Payout % incl Margin(Base+Inc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MFC_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created as a part of the request  https://fusion.mastercard.com/jira/browse/DEALSADAPT-190</description>
        <label>MFC Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFC_Country_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As a part of F10469. 
If this checkbox is checked , than Deal belongs to IMK Region.</description>
        <label>MFC Country Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFC_Deal_Link__c</fullName>
        <description>As a part of S65832. Created Deal Link field for VF template User selects non compliant with MFC IMK obligations_HTML</description>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFC Deal Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFC_Missing_Information__c</fullName>
        <description>As a part of DealsAdapt-193</description>
        <label>MFC Missing Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maestro_Cirrus_Debit__c</fullName>
        <description>Maestro/Cirrus Debit</description>
        <inlineHelpText>Maestro/Cirrus Debit</inlineHelpText>
        <label>Maestro/Cirrus Debit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>LoB_Debit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CoBrand</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>Unembossed</fullName>
                </value>
                <value>
                    <fullName>Standard (Debit)</fullName>
                </value>
                <value>
                    <fullName>Gold (Debit)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manage_ICA_s__c</fullName>
        <formula>HYPERLINK(&quot;../apex/BD_deal_Countries?id=&quot;&amp;Id&amp;&quot;&amp;edit=1&quot; , &quot;Manage ICA&apos;s&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manage ICA&apos;s</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory_Approvers__c</fullName>
        <description>Used to store user IDs of mandatory approvers as comma separated values.</description>
        <inlineHelpText>Used to store user IDs of mandatory approvers as comma separated values.</inlineHelpText>
        <label>Mandatory Approvers</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mandatory_Financial_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory Financial Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Creative_Communication_Support__c</fullName>
        <inlineHelpText>Support needed from other internal groups such as Marketing, Communications, etc.</inlineHelpText>
        <label>Marketing/Communication Support Required</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Master_Deal__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked this Deal becomes the master deal and all other if any will become alternate. The master deal is the one that becomes active after an opportunity is closed won.</inlineHelpText>
        <label>Master Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mastercard_Commitments__c</fullName>
        <inlineHelpText>MasterCard obligations including type and dollar support</inlineHelpText>
        <label>MasterCard Commitments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mastercard_Discounted_Payout_Inc__c</fullName>
        <formula>If( (BLANKVALUE( Discounted_Gross_Total_Revenue_Inc__c ,0) + BLANKVALUE(Discounted_Other_Costs_Inc__c,0))=0,0,
 
If(( -T1_Discounted_Incentive_USD__c -  T1_Discounted_VAS_Margin__c )/( Discounted_Gross_Total_Revenue_Inc__c +  Discounted_Other_Costs_Inc__c )&gt;0, 
( -T1_Discounted_Incentive_USD__c -  T1_Discounted_VAS_Margin__c )/( Discounted_Gross_Total_Revenue_Inc__c +  Discounted_Other_Costs_Inc__c ), 
( -T1_Discounted_Incentive_USD__c -  T1_Discounted_VAS_Margin__c )/( Discounted_Gross_Total_Revenue_Inc__c +  Discounted_Other_Costs_Inc__c )*-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Payout %  incl. Margin (Inc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Migration_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Migration Flag to know if a record is created by a migration. (to be able to not fire certain workflows)</description>
        <label>Migration Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Detail_Information_Old__c</fullName>
        <label>Missing Detail Information Old</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Missing_Detail_Information__c</fullName>
        <label>Missing Detail Information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Missing_Projections_Data__c</fullName>
        <label>Missing Projections Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Missing_Projections_Information__c</fullName>
        <description>Populated by workflow, based on the Missing Projections Data field</description>
        <label>Missing Projections Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Average_Sign_on_Bonus__c</fullName>
        <formula>T1_Total_Customer_Sign_on_Bonus__c  /     Total_Calendar_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Average Sign-on Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multi_Party_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-Party Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPV_Base_Inc_Val__c</fullName>
        <label>NPV (Base + Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPV_Discounted_Cash_Flow__c</fullName>
        <formula>T1_NPV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPV Discounted Cash Flow</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPV_Inc_Val__c</fullName>
        <label>NPV (inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Customer_Revenue_BPS_Base_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T2_GDV__c , 0) = 0, 
0, 
((T2_Gross_Customer_Revenue__c + T2_Processing_Revenue__c + T2_Total_Customer_Support__c)/T2_GDV__c )*10000 
)</formula>
        <label>Net Customer Revenue BPS (Base + Inc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Customer_Revenue_BPS_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T1_GDV__c , 0) = 0, 
0, 
((T1_Gross_Customer_Revenue__c + T1_Processing_Revenue__c + T1_Total_Customer_Support__c)/T1_GDV__c )*10000 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Customer Revenue BPS (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Customer_Revenue_Base_Inc__c</fullName>
        <label>Net Customer Revenue (Base + Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Customer_Revenue_Inc__c</fullName>
        <label>Net Customer Revenue (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Deal_Revenue_BPS_USD__c</fullName>
        <description>Formula field was created to report on Net Deal Revenue basis-points (BPS).</description>
        <formula>IF(T1_GDV__c=0,0, T1_Net_Deal_Revenue__c / T1_GDV__c ) * 10000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field was created to report on Net Revenue basis-points (BPS).</inlineHelpText>
        <label>Net Total Revenue BPS (Inc. Only)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Total_Revenue_BPS_Base_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T2_GDV__c , 0) = 0, 
0, 
(T2_Net_Deal_Revenue__c/T2_GDV__c )*10000
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total Revenue BPS (Base + Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Residual_Year_Revenue_Explain__c</fullName>
        <label>If no, Explain (Residual Revenue)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Touch_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the deal can use pre-approved contract templates within the ARIBA system</description>
        <inlineHelpText>No Touch / Light Touch Eligible agreements use pre-approved contract templates within the ARIBA system</inlineHelpText>
        <label>No Touch / Light Touch Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Terms__c</fullName>
        <formula>IF( 
( End_Date__c -  Start_Date__c ) / 365 * 12 &lt; 1, 1, ( End_Date__c -  Start_Date__c ) / 365 * 12
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Terms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Mandatory_Approvers__c</fullName>
        <description>Used to store user IDs of non-mandatory approvers as comma separated values.</description>
        <inlineHelpText>Used to store user IDs of non-mandatory approvers as comma separated values.</inlineHelpText>
        <label>Non Mandatory Approvers</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nr_of_Returns__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of Returns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nr_of_Unique_Optional_Approvers__c</fullName>
        <label># of Unique Optional Approvers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nr_of_Unique_Required_Approvers__c</fullName>
        <label># of Unique Required Approvers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Calendar_Years__c</fullName>
        <formula>IF( 
    AND( YEAR(End_Date__c) &gt; YEAR(Start_Date__c) ,
         AND( MONTH(End_Date__c) = MONTH(Start_Date__c), MONTH(End_Date__c) = 1 ) ,
         DAY(End_Date__c) &gt;= DAY(Start_Date__c) 
    ) , 

    IF( ISNUMBER( TEXT( Account_Protective_Provision_Years__c ) ), 
    YEAR( End_Date__c ) - YEAR( Start_Date__c )  +   VALUE( TEXT( Account_Protective_Provision_Years__c ) ),
    YEAR( End_Date__c ) - YEAR( Start_Date__c ) ),

    IF( ISNUMBER( TEXT( Account_Protective_Provision_Years__c ) ), 
    YEAR( End_Date__c ) - YEAR( Start_Date__c ) + 1 +   VALUE( TEXT( Account_Protective_Provision_Years__c ) ),
    YEAR( End_Date__c ) - YEAR( Start_Date__c ) + 1)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Calendar Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Time_Outs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>S691018 : keeps track of Number of Time Outs</description>
        <label>Number of Time Outs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_residual_years__c</fullName>
        <inlineHelpText>Identifies the number of years the existing deal has residual protection for.</inlineHelpText>
        <label>Number of Residual Years</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Does_pr_deal_have_residual_yr_revenue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Objective_Situation__c</fullName>
        <inlineHelpText>Summary of the objective and situation surrounding the deal</inlineHelpText>
        <label>Objective/Situation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OpportunityType__c</fullName>
        <label>Opportunity Type (DO NOT CHANGE)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Renewal Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_TypeText__c</fullName>
        <description>For usability. The user will not be able to change this one (as the real value is at the bottom of the page layout)</description>
        <formula>Text( OpportunityType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Oppt Link</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>bDeals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Information from Deal&apos;s opportunity products. Used for reporting.</description>
        <inlineHelpText>Information from Deal&apos;s opportunity products. Used for reporting.</inlineHelpText>
        <label>Product/Service Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Submission_Date__c</fullName>
        <description>absolute original date, so no reset if recall/return</description>
        <label>Original Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Costs_BPS_Base_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T2_GDV__c , 0) = 0, 
0, 
(T2_Other_Costs__c/T2_GDV__c )*10000 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Costs BPS (Base + Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Costs_BPS_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T1_GDV__c , 0) = 0, 
0, 
(T1_Other_Costs__c/T1_GDV__c )*10000 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Costs BPS (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Key_Notes__c</fullName>
        <description>Other Key Notes</description>
        <inlineHelpText>Any additional information that is pertinent to the deal.</inlineHelpText>
        <label>Other Key Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Revenue_BPS_Base_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T2_GDV__c , 0) = 0, 
0, 
(T2_Processing_Revenue__c/T2_GDV__c )*10000
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Revenue BPS (Base + Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Revenue_BPS_Inc__c</fullName>
        <formula>IF(BLANKVALUE(T1_GDV__c , 0) = 0, 
0, 
(T1_Processing_Revenue__c/T1_GDV__c )*10000
)</formula>
        <label>Other Revenue BPS (Inc.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Admins_Only__c</fullName>
        <label>Override Admins Only</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a Deal is currently in Override Mode or not. For use by BD Finance only.</description>
        <inlineHelpText>Indicates if a Deal is currently in Override Mode or not. For use by BD Finance only.</inlineHelpText>
        <label>Override Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_PDF_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if the PDF created upon entering override mode was created.</description>
        <label>Override_PDF_Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_User__c</fullName>
        <description>Displays the name of the user who has locked the record. (who has put the record in override mode)
Will be filled/emptied by workflows.</description>
        <label>Override User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Request from Stacy D&apos;auria - notify finance planners of newly closed deals in order to expedite CRS set up of accounting treatments and forecast.</description>
        <label>Planner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Please_explain_Additional_commitments__c</fullName>
        <label>Please explain Additional commitments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Potential_Financial_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field updated by code. Used to validate whether or not there is a potential (as the FM is only selected at the Submit page) financial model (an attachment that is not a PDF Snapshot) on this deal.</description>
        <label>Potential Financial Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Deal_Status__c</fullName>
        <description>As a part of F10469. 
This is for Returned functionality to get the prior value of Deal Status through WF.</description>
        <label>Prior Deal Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Information from Deal&apos;s opportunity products. Used for reporting.</description>
        <inlineHelpText>Information from Deal&apos;s opportunity products. Used for reporting.</inlineHelpText>
        <label>Product Name</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Projection_Page_IPS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by workflow, to know when an existing deal gets returned or recalled, from which point it should also use the new IPS layout.</description>
        <label>Projection Page IPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projection_Type_T1_1a__c</fullName>
        <description>Formula that displays of T1 table type</description>
        <formula>CASE( OpportunityType__c , &quot;New Customer&quot;, &quot;Inc&quot;, &quot;Renewal Business&quot;, &quot;Inc&quot;,&quot;New Business (with existing customer)&quot;, &quot;Inc&quot;,&quot;Wrong Oppt Type label&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays T1 table projection type (Base, Inc or Base+Inc)</inlineHelpText>
        <label>Projection Type (T1)</label>
        <type>Text</type>
    </fields>
</CustomObject>